@@ -1,7 +1,14 @@
+2016-03-08 :	coco <coco@hexgolems.com> & leex <leex@hexgolems.com>
+	*	Fix wrong constant names
+	*	Fix reading memory with result -1
+	*	Added nonblocking continue
+
 2013-03-04 :	mkfs <mkfs@thoughtgang.org>
 	*	Fixed build errors
+
 2013-03-03 :	mkfs <mkfs@thoughtgang.org>
 	*	Updated rakefile to handle new tasks
+
 2011-07-08 :	mkfs <mkfs@thoughtgang.org>
 	*	Added Hash of syscall num-to-name
 	*	Version bump
